kubernetes/geeksProfile.yaml
# geeks-profile deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geeks-profile
  labels:
    app: geeks-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geeks-profile
  template:
    metadata:
      labels:
        app: geeks-profile
    spec:
      containers:
        - name: geeks-profile
          image: mohamadassi173/geeks_profile
          ports:
            - containerPort: 8080
---
# geeks-profile service
apiVersion: v1
kind: Service
metadata:
  name: geeks-profile-service
spec:
  type: ClusterIP
  selector:
    app: geeks-profile
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
